fix a htmlmin & README

--- a/src/main/webapp/app/algorithm/bubbleSort/bubbleSort.html
+++ b/src/main/webapp/app/algorithm/bubbleSort/bubbleSort.html
@@ -47,6 +47,7 @@
                 <p>
                     <strong>Javascript :</strong>
                 </p>
+                <!-- htmlmin:ignore -->
                 <textarea id="editor" rows="4" cols="50" title="editorForm">
 function bubbleSort(arry){
     var tmp = 0;
@@ -61,12 +62,14 @@ function bubbleSort(arry){
     }
 }
                 </textarea>
+                <!-- htmlmin:ignore -->
             </div>
 
             <div>
                 <p>
                     <strong>Java :</strong>
                 </p>
+                <!-- htmlmin:ignore -->
                 <textarea id="editor2" rows="4" cols="50" title="editorForm">
 static void bubbleSort(arry){
     int tmp;
@@ -81,6 +84,7 @@ static void bubbleSort(arry){
     }
 }
                 </textarea>
+                <!-- htmlmin:ignore -->
             </div>
         </section>
     </div>
