--- a/src/main/webapp/app/algorithm/insertionSort/insertionSort.html
+++ b/src/main/webapp/app/algorithm/insertionSort/insertionSort.html
@@ -48,6 +48,7 @@
                 <p>
                     <strong>Javascript :</strong>
                 </p>
+                <!-- htmlmin:ignore -->
                 <textarea id="editor" rows="4" cols="50" title="editorForm">
 function insertionSort(arry){
     var tmp = 0;
@@ -63,12 +64,14 @@ function insertionSort(arry){
     }
 }
                 </textarea>
+                <!-- htmlmin:ignore -->
             </div>
 
             <div>
                 <p>
                     <strong>Java :</strong>
                 </p>
+                <!-- htmlmin:ignore -->
                 <textarea id="editor2" rows="4" cols="50" title="editorForm">
 static void insertionSort(arry){
     int tmp;
@@ -84,6 +87,7 @@ static void insertionSort(arry){
     }
 }
                 </textarea>
+                <!-- htmlmin:ignore -->
             </div>
         </section>
     </div>
