--- a/src/main/webapp/app/algorithm/quickSort/quickSort.html
+++ b/src/main/webapp/app/algorithm/quickSort/quickSort.html
@@ -47,6 +47,7 @@
                 <p>
                     <strong>Javascript :</strong>
                 </p>
+                <!-- htmlmin:ignore -->
                 <textarea id="editor" rows="4" cols="50" title="editorForm">
 function Sort(array) {
     QuickSort(array, 0, array.length - 1);
@@ -78,12 +79,14 @@ function Swap(arry, left, right) {
     arry[right] = temp;
 }
                 </textarea>
+                <!-- htmlmin:ignore -->
             </div>
 
             <div>
                 <p>
                     <strong>Java :</strong>
                 </p>
+                <!-- htmlmin:ignore -->
                 <textarea id="editor2" rows="4" cols="50" title="editorForm">
 static void Sort(int[] array) {
     QuickSort(array, 0, array.length - 1);
@@ -117,6 +120,7 @@ static void Swap(int[] array, int left, int right) {
     array[right] = temp;
 }
                 </textarea>
+                <!-- htmlmin:ignore -->
             </div>
         </section>
     </div>
