--- a/src/main/webapp/app/algorithm/selectionSort/selectionSort.html
+++ b/src/main/webapp/app/algorithm/selectionSort/selectionSort.html
@@ -47,6 +47,7 @@
                 <p>
                     <strong>Javascript :</strong>
                 </p>
+                <!-- htmlmin:ignore -->
                 <textarea id="editor" rows="4" cols="50" title="editorForm">
 function selectionSort(arry){
     var tmp = 0;
@@ -64,12 +65,14 @@ function selectionSort(arry){
     }
 }
                 </textarea>
+                <!-- htmlmin:ignore -->
             </div>
 
             <div>
                 <p>
                     <strong>Java :</strong>
                 </p>
+                <!-- htmlmin:ignore -->
                 <textarea id="editor2" rows="4" cols="50" title="editorForm">
 static void selectionSort(arry){
     int tmp;
@@ -87,6 +90,7 @@ static void selectionSort(arry){
     }
 }
                 </textarea>
+                <!-- htmlmin:ignore -->
             </div>
         </section>
     </div>
