--- a/src/main/webapp/app/algorithm/bubbleSort/bubbleSort.html
+++ b/src/main/webapp/app/algorithm/bubbleSort/bubbleSort.html
@@ -1,4 +1,4 @@
-<div class="container">
+<main class="container" role="main">
     <div class="row">
         <section class="col-md-12 well">
             <h1>버블 정렬</h1>
@@ -88,4 +88,4 @@ static void bubbleSort(arry){
             </div>
         </section>
     </div>
-</div>
+</main>
