--- a/src/main/webapp/app/algorithm/insertionSort/insertionSort.html
+++ b/src/main/webapp/app/algorithm/insertionSort/insertionSort.html
@@ -1,4 +1,4 @@
-<div class="container">
+<main class="container" role="main">
     <div class="row">
         <section class="col-md-12 well">
             <h1>삽입 정렬</h1>
@@ -91,4 +91,4 @@ static void insertionSort(arry){
             </div>
         </section>
     </div>
-</div>
+</main>
