--- a/src/main/webapp/app/algorithm/selectionSort/selectionSort.html
+++ b/src/main/webapp/app/algorithm/selectionSort/selectionSort.html
@@ -1,4 +1,4 @@
-<div class="container">
+<main class="container" role="main">
     <div class="row">
         <section class="col-md-12 well">
             <h1>선택 정렬</h1>
@@ -94,4 +94,4 @@ static void selectionSort(arry){
             </div>
         </section>
     </div>
-</div>
+</main>
