--- a/src/main/webapp/app/customPlugins/customPlugins.html
+++ b/src/main/webapp/app/customPlugins/customPlugins.html
@@ -1,4 +1,4 @@
-<div class="container">
+<main class="container" role="main">
     <div class="row">
         <div class="jumbotron">
             <h1>Plugins(공사 중)</h1>
@@ -43,4 +43,4 @@
             </div>
         </div>
     </div>
-</div>
+</main>
