--- a/src/main/webapp/app/customPlugins/owlCaroulsel/owlCaroulsel.html
+++ b/src/main/webapp/app/customPlugins/owlCaroulsel/owlCaroulsel.html
@@ -1,4 +1,4 @@
-<div class="container">
+<main class="container" role="main">
     <div class="row">
         <section class="col-md-12 well">
             <h1>Owl-Carosel(작업 중)</h1>
@@ -60,4 +60,4 @@
             <ui-codemirror ui-codemirror-opts="vm.editorOptions"></ui-codemirror>
         </section>
     </div>
-</div>
+</main>
