--- a/src/main/webapp/app/algorithm/algorithm.html
+++ b/src/main/webapp/app/algorithm/algorithm.html
@@ -1,4 +1,4 @@
-<div class="container">
+<main class="container" role="main">
     <div class="row">
         <div class="jumbotron">
             <h1>algorithm(공사 중)</h1>
@@ -58,5 +58,17 @@
                 </div>
             </div>
         </a>
+        <a ui-sref="heepSort">
+            <div class="col-md-4">
+                <div class="panel panel-info">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">힙 정렬</h3>
+                    </div>
+                    <div class="panel-body">
+                        <p>냉무</p>
+                    </div>
+                </div>
+            </div>
+        </a>
     </div>
-</div>
+</main>
