--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -1,5 +1,5 @@
 <div class="row custom" ng-cloak>
-    <aside class="aside-container non-mobile col-sm-3" ng-if="!vm.isXs">
+    <aside class="aside-container non-mobile col-sm-3" ng-if="!vm.isXs" role="complementary">
         <div fix-aside wh-resize prop-name="width" ratio="25" max-width="1250">
             <div class="aside-outer-scroller">
                 <div class="aside-inner-scroller" wh-resize prop-name="height" ratio="100">
@@ -50,7 +50,7 @@
             </div>
         </div>
     </aside>
-    <main class="main-container col-sm-9 col-xs-12">
+    <main class="main-container col-sm-9 col-xs-12" role="main">
         <section id="introduce">
             <h1 class="first-text">
                 <p>김수겸</p>
@@ -197,7 +197,7 @@
                     </div>
                     <div class="text-center">
                         <button type="submit" ng-disabled="editForm.$invalid || isSaving"
-                                class="btn btn-warning btn-raised">
+                                class="btn btn-warning btn-raised" role="button">
                             <span class="glyphicon glyphicon-save"></span>&nbsp;<span>보내기</span>
                         </button>
                     </div>
@@ -207,7 +207,7 @@
     </main>
 </div>
 
-<aside class="aside-container mobile" ng-if="vm.isXs">
+<aside class="aside-container mobile" ng-if="vm.isXs" role="complementary">
     <div class="btn-group btn-group-justified btn-group-raised">
         <a class="btn btn-warning" ui-sref="home.profile">
             <div uib-tooltip="연락처">
