--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -42,7 +42,7 @@
 <![endif]-->
 
 <!--head-->
-<div ui-view="navbar" ng-cloak></div>
+<header ui-view="navbar" ng-cloak role="banner"></header>
 <!--head end-->
 
 <!--body-->
@@ -100,11 +100,10 @@
 <script src="app/components/util/directive/jhi-item-count.directive.js"></script>
 <script src="app/components/util/directive/fixAside.directive.js"></script>
 <script src="app/account/social/directive/social.directive.js"></script>
-<script src="app/account/reset/request/reset.request.state.js"></script>
-<script src="app/account/reset/request/reset.request.controller.js"></script>
 <script src="app/account/reset/finish/reset.finish.state.js"></script>
 <script src="app/account/reset/finish/reset.finish.controller.js"></script>
-<script src="app/services/user/user.service.js"></script>
+<script src="app/account/reset/request/reset.request.state.js"></script>
+<script src="app/account/reset/request/reset.request.controller.js"></script>
 <script src="app/services/auth/register.service.js"></script>
 <script src="app/services/auth/principal.service.js"></script>
 <script src="app/services/auth/password.service.js"></script>
@@ -116,6 +115,7 @@
 <script src="app/services/auth/auth.jwt.service.js"></script>
 <script src="app/services/auth/activate.service.js"></script>
 <script src="app/services/auth/account.service.js"></script>
+<script src="app/services/user/user.service.js"></script>
 <script src="app/layouts/navbar/navbar.controller.js"></script>
 <script src="app/layouts/navbar/active-link.directive.js"></script>
 <script src="app/layouts/error/error.state.js"></script>
@@ -135,9 +135,6 @@
 <script src="app/components/util/data-util.service.js"></script>
 <script src="app/components/util/capitalize.filter.js"></script>
 <script src="app/components/util/base64.service.js"></script>
-<script src="app/components/alert/alert.service.js"></script>
-<script src="app/components/alert/alert.directive.js"></script>
-<script src="app/components/alert/alert-error.directive.js"></script>
 <script src="app/components/login/login.service.js"></script>
 <script src="app/components/login/login.controller.js"></script>
 <script src="app/components/form/uib-pagination.config.js"></script>
@@ -150,11 +147,24 @@
 <script src="app/blocks/interceptor/errorhandler.interceptor.js"></script>
 <script src="app/blocks/interceptor/auth.interceptor.js"></script>
 <script src="app/blocks/interceptor/auth-expired.interceptor.js"></script>
+<script src="app/components/alert/alert.service.js"></script>
+<script src="app/components/alert/alert.directive.js"></script>
+<script src="app/components/alert/alert-error.directive.js"></script>
 <script src="app/blocks/handlers/state.handler.js"></script>
 <script src="app/blocks/config/localstorage.config.js"></script>
 <script src="app/blocks/config/http.config.js"></script>
 <script src="app/blocks/config/compile.config.js"></script>
 <script src="app/blocks/config/alert.config.js"></script>
+<script src="app/algorithm/selectionSort/selectionSort.state.js"></script>
+<script src="app/algorithm/selectionSort/selectionSort.controller.js"></script>
+<script src="app/algorithm/quickSort/quickSort.state.js"></script>
+<script src="app/algorithm/quickSort/quickSort.controller.js"></script>
+<script src="app/algorithm/insertionSort/insertionSort.state.js"></script>
+<script src="app/algorithm/insertionSort/insertionSort.controller.js"></script>
+<script src="app/algorithm/heepSort/heepSort.state.js"></script>
+<script src="app/algorithm/heepSort/heepSort.controller.js"></script>
+<script src="app/algorithm/bubbleSort/bubbleSort.state.js"></script>
+<script src="app/algorithm/bubbleSort/bubbleSort.controller.js"></script>
 <script src="app/admin/user-management/user-management.state.js"></script>
 <script src="app/admin/user-management/user-management.controller.js"></script>
 <script src="app/admin/user-management/user-management-dialog.controller.js"></script>
@@ -178,14 +188,6 @@
 <script src="app/admin/audits/audits.state.js"></script>
 <script src="app/admin/audits/audits.service.js"></script>
 <script src="app/admin/audits/audits.controller.js"></script>
-<script src="app/algorithm/selectionSort/selectionSort.state.js"></script>
-<script src="app/algorithm/selectionSort/selectionSort.controller.js"></script>
-<script src="app/algorithm/quickSort/quickSort.state.js"></script>
-<script src="app/algorithm/quickSort/quickSort.controller.js"></script>
-<script src="app/algorithm/bubbleSort/bubbleSort.state.js"></script>
-<script src="app/algorithm/bubbleSort/bubbleSort.controller.js"></script>
-<script src="app/algorithm/insertionSort/insertionSort.state.js"></script>
-<script src="app/algorithm/insertionSort/insertionSort.controller.js"></script>
 <script src="app/account/social/social.state.js"></script>
 <script src="app/account/social/social.service.js"></script>
 <script src="app/account/social/social-register.controller.js"></script>
@@ -202,10 +204,10 @@
 <script src="app/home/home.state.js"></script>
 <script src="app/home/home.controller.js"></script>
 <script src="app/home/home-profile-dialog.controller.js"></script>
-<script src="app/customPlugins/customPlugins.state.js"></script>
 <script src="app/entities/entity.state.js"></script>
-<script src="app/admin/admin.state.js"></script>
+<script src="app/customPlugins/customPlugins.state.js"></script>
 <script src="app/algorithm/algorithm.state.js"></script>
+<script src="app/admin/admin.state.js"></script>
 <script src="app/account/account.state.js"></script>
 <script src="app/app.state.js"></script>
 <script src="app/app.controller.js"></script>
