--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,30 +3,28 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="initial-scale=1, user-scalable=no, width=device-width">
     <title>KSKBLOG</title>
     <meta name="description" content="수겸이의 블로그 - 이력서, 포트폴리오, 스터디">
-    <meta name="viewport"
-          content="initial-scale=1, user-scalable=no, width=device-width">
+
     <meta name="application-name" content="kskblog">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-    <link rel="apple-touch-icon" href="content/images/favicon/apple-touch-icon.png"/>
-    <link rel="apple-touch-icon" sizes="57x57" href="content/images/favicon/apple-touch-icon-57x57.png"/>
-    <link rel="apple-touch-icon" sizes="72x72" href="content/images/favicon/apple-touch-icon-72x72.png"/>
-    <link rel="apple-touch-icon" sizes="76x76" href="content/images/favicon/apple-touch-icon-76x76.png"/>
-    <link rel="apple-touch-icon" sizes="114x114" href="content/images/favicon/apple-touch-icon-114x114.png"/>
-    <link rel="apple-touch-icon" sizes="120x120" href="content/images/favicon/apple-touch-icon-120x120.png"/>
-    <link rel="apple-touch-icon" sizes="144x144" href="content/images/favicon/apple-touch-icon-144x144.png"/>
-    <link rel="apple-touch-icon" sizes="152x152" href="content/images/favicon/apple-touch-icon-152x152.png"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="content/images/favicon/apple-touch-icon-180x180.png"/>
-
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="content/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="content/images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="content/images/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="content/images/favicon/apple-icon-76x76.png"/>
+    <link rel="apple-touch-icon" sizes="120x120" href="content/images/favicon/apple-icon-120x120.png"/>
+    <link rel="apple-touch-icon" sizes="152x152" href="content/images/favicon/apple-icon-152x152.png"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="content/images/favicon/apple-icon-180x180.png"/>
+    <link rel="icon" type="image/png" sizes="192x192"  href="content/images/favicon/android-icon-192x192.png">
     <!-- build:css content/css/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
-    <link rel="stylesheet" href="bower_components/codemirror/lib/codemirror.css" />
-    <link rel="stylesheet" href="bower_components/codemirror/theme/dracula.css" />
+    <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css"/>
+    <link rel="stylesheet" href="bower_components/codemirror/lib/codemirror.css"/>
+    <link rel="stylesheet" href="bower_components/codemirror/theme/dracula.css"/>
     <!-- endbower -->
     <link rel="stylesheet" href="content/css/vendor.css">
     <!-- endbuild -->
