created a Tracer directive

--- a/src/main/webapp/app/algorithm/heepSort/heepSort.html
+++ b/src/main/webapp/app/algorithm/heepSort/heepSort.html
@@ -33,7 +33,7 @@
                         <button type="button" class="btn btn-warning btn-raised" ng-click="vm.sortStart()"
                                 ng-disabled="!vm.canvasConfirm">정렬 시작
                         </button>
-                        <button type="button" class="btn btn-warning btn-raised" ng-click="vm.roopStop()"
+                        <button type="button" class="btn btn-warning btn-raised" ng-click="vm.sortStop()"
                                 ng-disabled="!vm.canvasConfirm">정렬 정지
                         </button>
                     </div>
